tests/models/enum/named/i8/fail/alias.stderr
error: custom attribute panicked
 --> tests/models/enum/named/i8/fail/alias.rs:2:1
  |
2 | #[model]
  | ^^^^^^^^
  |
  = help: message: called `Result::unwrap()` on an `Err` value: Error("expected string literal")
